# EdnaML

./: .gitignore  CNAME  Key Updates.md  LICENSE  Makefile  carzam.py  config-reidentification.md  config.md  corroborative_labeler.py  docs.md  ednaml.py  ednaml2.py  generalized_zsl.py  main.py  mjlcf.md  mjlcf.py  readme.md  reidentification.py  requirements.txt  roadmap.md  scratchpad  setup.cfg  setup.md  setup.py  test.py  train.py  vae_gan.py
archives/: CarZamLossBuilder.py  ednaml2.py  modelabstracts.py  old_readme.md  old_requirements.txt  requirements.txt  storage tests.txt
backbones/: interpretableresnet.py  multibranchresnet.py  resnet.py  shufflenet.py
config/: base.py  carzam_cars196.yml  vaegan_base.yml  veri.yml  veri2.yml  veri3.yml  veri4.yml  veri5.yml  veri6.yml  veri_base.yml  veri_schedule1.yml
core/: EdnaML.py
crawlers/: CUB200_2011DataCrawler.py  Cars196DataCrawler.py  CoLabelCompCarsCrawler.py  CoLabelIntegratedDatasetCrawler.py  CoLabelVehicleColorCrawler.py  MJLCFCompCarsCrawler.py  ReidDataCrawler.py  SUNDataCrawler.py  VRICDataCrawler.py  VeRiDataCrawler.py  VehicleIDDataCrawler.py  __init__.py
datareaders/: CompCars.py  VeRi.py  VehicleColor.py  VehicleID.py  __init__.py
deployments/: CoLabelEnsemble.py
docs/: conf.py  index.rst
ednaml/: __init__.py
experiments/: corroborative-labeling.py  corroborative_labeler.py  team-labeling.py
generators/: CUB200_2011Generator.py  Cars196Generator.py  ClassedGenerator.py  ClassificationGenerator.py  CoLabelDeployGenerator.py  CoLabelGenerator.py  CoLabelIntegratedDatasetGenerator.py  MultiClassificationGenerator.py  SequencedGenerator.py  __init__.py
loss/: CenterLoss.py  ClusterLoss.py  CompactContrastiveLoss.py  ContrastiveLoss.py  MarginLoss.py  ProxyNCALoss.py  SoftmaxLabelSmooth.py  SoftmaxLogitsLoss.py  SoftmaxLossSmooth.py  TripletLoss.py  __init__.py
models/: CarzamResnet.py  ClassificationResnet.py  CoLabelInterpretableResNet.py  CoLabelResnet.py  MultiBranchResnet.py  MultiClassificationResnet.py  ResnetBase.py  VAEGAN.py  __init__.py  abstracts.py
optimizer/: ClassificationOptimizer.py  CoLabelOptimizer.py  ReIDOptimizerBuilder.py  StandardLossOptimizer.py  VAEGANOptimizerBuilder.py  __init__.py
profiles/: ednaml.prof  prof.py
samples/: EdnaML Custom Crawler.ipynb  EdnaML Debugging.ipynb
scheduler/: FineGrainedSteppedLR.py  __init__.py
stack/: readme.md
tests/: test_config_merge.py
trainer/: BaseTrainer.py  CarzamTrainer.py  ClassificationTrainer.py  CoLabelTrainer.py  MultiBranchTrainer.py  MultiClassificationTrainer.py  SimpleTrainer.py  VAEGANTrainer.py  VehicleIDTrainer.py  __init__.py
usage-docs/: config-compcars.yml  config-full.md  config-full.yml  config.md  introduction.md  readme.md
utils/: LabelMetadata.py  SaveMetadata.py  __init__.py  (+2 more)
(+796 files in other folders)
