[metadata]
name = ednaml
version=0.1.4
url = https://github.com/asuprem/GLAMOR
project_urls =
    Documentation = https://github.com/asuprem/GLAMOR
    Code = https://github.com/asuprem/GLAMOR
    Issue tracker = https://github.com/asuprem/GLAMOR/issues
license = Apache 2.0
author = Abhijit Suprem
author_email = asuprem@gatech.edu
maintainer = Abhijit Suprem
maintainer_email = asuprem@gatech.edu
description = A framework running and tracking ML experiments
long_description = file: readme.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA :: 11.0
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
[options]
packages = find:
package_dir = 
    =src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
