[metadata]
name = ednaml
version=0.1.4
url = https://github.com/asuprem/GLAMOR
project_urls =
    Documentation = https://github.com/asuprem/GLAMOR
    Code = https://github.com/asuprem/GLAMOR
    Issue tracker = https://github.com/asuprem/GLAMOR/issues
license = Apache 2.0
author = Abhijit Suprem
author_email = asuprem@gatech.edu
maintainer = Abhijit Suprem
maintainer_email = asuprem@gatech.edu
description = A framework running and tracking ML experiments
long_description = file: readme.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA :: 11.0
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = 
    =src
include_package_data = true
python_requires = >= 3.7
install_requires = 
    scikit-learn>=1.0.2
    torch>=1.10.*
    torchinfo>=1.6.5
    torchvision>=0.11.*
    Pillow>=7.1.2    #9.0.x, this is for colab...
    tqdm>=4.63.*
    sentencepiece>=0.1.96
    # Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.extras_require]
azure = 
    azure-storage-blob >= 12.13.0
metrics = 
    torchmetrics >= 0.9.3
full = ednaml[azure,metrics]